tests/error_checks/alws1.si
algorithm main(output uint8 leds)
{
  uint8 a = 0;
  always {
    leds := a; // error: no allowed here
  }

}
